# openwrt-usbmodem

./: .editorconfig  README.md  check.sh  test.sh  ubus-api.md
luci-app-usbmodem/: Makefile
luci-app-usbmodem/htdocs/luci-static/resources/: usbmodem-api.js  usbmodem-view.js  usbmodem.js
luci-app-usbmodem/htdocs/luci-static/resources/view/usbmodem/: commands.js  custom.css  settings.js  sms.js  status.js  ussd.js  utils.js
luci-app-usbmodem/root/usr/share/luci/menu.d/: luci-app-usbmodem.json
luci-app-usbmodem/root/usr/share/rpcd/acl.d/: luci-app-usbmodem.json
luci-proto-usbmodem/: Makefile
luci-proto-usbmodem/htdocs/luci-static/resources/protocol/: usbmodem.js
luci-proto-usbmodem/root/usr/share/rpcd/acl.d/: luci-proto-usbmodem.json
usbmodem/: Makefile  check.sh  gen-modems-index.pl  test.sh
usbmodem/data/: 11f5-0004  11f5-1004  1286-4e3d  12d1-155e  201e-10f8
usbmodem/files/: usbmodem.sh  usbmodem.upgrade  usbmodem.usb
usbmodem/src/: AtChannel.cpp  AtChannel.h  AtParser.cpp  AtParser.h  BinaryParser.cpp  BinaryParser.h  Blobmsg.cpp  Blobmsg.h  CMakeLists.txt  GsmUtils.cpp  GsmUtils.h  Loop.cpp  Loop.h  Modem.cpp  Modem.h  ModemService.cpp  ModemService.h  ModemServiceApi.cpp  ModemServiceApi.h  Netifd.cpp  Netifd.h  Serial.cpp  Serial.h  Ubus.cpp  Ubus.h  UbusObject.cpp  UbusObject.h  UbusRequest.cpp  UbusRequest.h  Uci.cpp  UsbDiscover.cpp  UsbDiscover.h  UsbDiscoverData.cpp  Utils.cpp  Utils.h  main.cpp
usbmodem/src/Core/: AtChannel.cpp  AtChannel.h  AtParser.cpp  AtParser.h  BinaryParser.cpp  BinaryStream.cpp  BinaryStream.h  BitEnums.h  Blobmsg.cpp  Crc32.cpp  Crc32.h  Deferred.cpp  Deferred.h  Events.cpp  Events.h  GsmUtils.cpp  GsmUtils.h  Json.h  Loop.cpp  Loop.h  LoopBase.cpp  LoopBase.h  Netifd.cpp  Promise.cpp  Promise.h  Semaphore.cpp  Semaphore.h  Serial.cpp  Serial.h  SmsDb.cpp  SmsDb.h  Ubus.cpp  Ubus.h  UbusLoop.cpp  UbusLoop.h  UbusObject.cpp  UbusObject.h  UbusRequest.cpp  UbusRequest.h  Uci.cpp  (+5 more)
usbmodem/src/Modem/: Asr1802.cpp  Asr1802.h  BaseAt.cpp  BaseAt.h  GenericPpp.cpp  GenericPpp.h  HuaweiNcm.cpp  HuaweiNcm.h
usbmodem/src/Modem/Asr1802/: Data.cpp  EngMode.cpp  Network.cpp
usbmodem/src/Modem/BaseAt/: Info.cpp  Network.cpp  Sim.cpp  Sms.cpp  Ussd.cpp
usbmodem/src/Modem/HuaweiNcm/: Data.cpp  Network.cpp
usbmodem/src/ModemService/: Api.cpp  Dhcp.cpp  Modem.cpp  Sms.cpp
